--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
- font-family: 'Rancho', sans-serif; 
+ font-family: 'Itim', cursive; 'Times New Roman', sans-serif; 
 }
 
 body {
