--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,97 @@
 }
 
 body {
- height: 100vh;
+ /* height: 100vh; */
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
- background: linear-gradient(rgb(47,150,160), rgb(40,62,143));
- color: #FFFFFF; 
+ /* background: linear-gradient(rgb(47,150,160), rgb(40,62,143)); */
+ color: #000000; 
 }
 
+/* Supported Browser Banner */
+.banner-support {
+ position: fixed;
+ width: 100%;
+ height: 200px;
+ /*padding 0 100px;*/
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ background: #3E3E3E;
+ z-index: 1;
+ bottom: 0px; 
+}
 
+.banner-logo {
+ position: fixed;
+ bottom: 50px;
+ left: 30px; 
+}
+
+.browser-support-icon {
+ position: absolute;
+ top: 50%;
+ transform: translateY(-50%);
+ /* width: 100; */
+ text-align: center;
+}  
+
+.browser-support-icon h1 {
+ color: #FFFFFF;
+}
+
+.support-btn {
+ display: inline-block;
+ width: 80px;
+ height: 80px;
+ background: #F1F1F1;
+ margin: 10px;
+ border-radius: 30%;
+ box-shadow: 0 5px 15px -5px #00000070;
+ color: #3498DB;
+ overflow: hidden;
+ position: relative;
+}
+
+.support-btn i {
+ line-height: 80px;
+ font-size: 50px;
+ transition: 0.2s linear;
+}
+
+.support-btn:hover i{
+ transform: scale(1.3);
+ color: #F1F1F1;
+}
+
+.support-btn::before {
+ content: "";
+ position: absolute;
+ width: 120%;
+ height: 120%;
+ background: #3498DB;
+ transform: rotate(45deg);
+ left: -110%;
+ top: 90%;
+}
+
+.support-btn:hover::before {
+ animation: aaa 0.7s 1;
+ top: -10%;
+ left: -10%;
+}
+
+@keyframes aaa {
+ 0%{
+  left: -110%;
+  top: 90%;
+ }50%{
+  left: 10%;
+  top: -30%;
+ }100%{
+  top: -10%;
+  left: -10%;
+ }
+}
