--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,36 @@
+/* CSS Variables */
+:root {
+ --primary: #DDDDDD;
+ --dark: #333333;
+ --light: #FFFFFF;
+ --shadow: 0px 1px 5px rgba(104, 104, 104, 0.8);
+}
+
+html {
+ box-sizing: border-box;
+ /*font-family: Arial, helvetica, sans-serif; */
+ color: var(--dark);
+}
+
+body {
+ background: #CCCCCC;
+ margin: 30px 50px;
+ line-height: 1.4; 
+  /* height: 100vh; */
+ display: flex;
+ justify-content: center;
+ flex-direction: column;
+ align-items: center;
+ /* background: linear-gradient(rgb(47,150,160), rgb(40,62,143)); 
+ color: #000000; */
+}
+
 * {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
  font-family: 'Itim', cursive, 'Times New Roman', sans-serif; 
-}
-
-body {
- /* height: 100vh; */
- display: flex;
- justify-content: center;
- flex-direction: column;
- align-items: center;
- /* background: linear-gradient(rgb(47,150,160), rgb(40,62,143)); */
- color: #000000; 
 }
 
 /* Supported Browser Banner */
@@ -108,7 +125,8 @@ body {
 }
 
 .wrapper {
-
+ display: grid;
+ grid-gap: 20px;
 }
 
 .main-nav {
