--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 html {
  box-sizing: border-box;
- /*font-family: Arial, helvetica, sans-serif; */
+ /*font-family: Arial, helvetica, sans-serif;  'Times New Roman', sans-serif */
  color: var(--dark);
 }
 
@@ -30,7 +30,19 @@ body {
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
- font-family: 'Itim', cursive, 'Times New Roman', sans-serif; 
+ font-family: 'Itim', cursive; 
+}
+
+.btn {
+ background: var(--dark);
+ color: var(--light);
+ padding: 0.6rem 1.3rem;
+ text-decoration: none;
+ border: 0;
+}
+
+img {
+  max-width: 100%;
 }
 
 /* Supported Browser Banner */
