--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,20 @@ img {
   max-width: 100%;
 }
 
+.wrapper {
+ display: grid;
+ grid-gap: 20px;
+}
+
+/* Navigation */
+.main-nav ul {
+ display: grid;
+ grid-gap: 20px;
+ padding: 0;
+ list-style: none;
+ grid-template-columns: repeat(4, 1fr);
+}
+
 /* Supported Browser Banner */
 .banner-support {
  position: fixed;
