--- a/css/style.css
+++ b/css/style.css
@@ -82,13 +82,31 @@ img {
 .top-container {
  display: grid;
  grid-gap: 20px;
- gird-template-areas:
-  'showcase showcase top-box-a'
-  'showcase showcase top-box-b';
+ grid-template-areas:
+  "showcase showcase top-box-a"
+  "showcase showcase top-box-b";
 }
 
 /* Showcase */
+grid-area: showcase;
 
+/* Top Box */
+.top-box {
+ background: var(--primary);
+ display: grid;
+ align-items: center;
+ justify-items: center;
+ box-shadow: var(--shadow);
+ padding: 1.5rem;
+}
+
+.top-box-a {
+ grid-area: top-box-a;
+}
+
+.top-box-b {
+ grid-area: top-box-b;
+}
 
 /* Supported Browser Banner */
 .banner-support {
