--- a/css/style.css
+++ b/css/style.css
@@ -112,12 +112,23 @@ grid-area: showcase;
  padding: 1.5rem;
 }
 
+.top-box .price {
+ font-size: 2.5rem;
+}
+
 .top-box-a {
  grid-area: top-box-a;
 }
 
 .top-box-b {
  grid-area: top-box-b;
+}
+
+/* Boxes */
+.boxes {
+ display: grid;
+ grid-gap: 20px;
+ grid-template-colums: repeat(auto-fit, minmax(200px, 1fr)); 
 }
 
 /* Supported Browser Banner */
