--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ grid-area: showcase;
 .portfolio {
  display: grid;
  grid-gap: 20px;
- grid-template-columns: repeat(auto-fit, minmax(200px, 1fr);
+ grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 /* Supported Browser Banner */
