--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ grid-area: showcase;
 .boxes {
  display: grid;
  grid-gap: 20px;
- grid-template-columns: repeat(4, 1fr; 
+ grid-template-columns: repeat(4, 1fr); 
 }
 
 .box {
