--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,8 @@ grid-area: showcase;
 .boxes {
  display: grid;
  grid-gap: 20px;
- grid-template-columns: repeat(4, 1fr); 
+ grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+ /*grid-template-columns: repeat(4, 1fr);*/ 
 }
 
 .box {
@@ -149,12 +150,12 @@ grid-area: showcase;
  padding: 3rem;
 }
 
-/* Portfolio */
+/* Portfolio 
 .portfolio {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-}
+} */
 
 /* Supported Browser Banner */
 .banner-support {
