--- a/css/style.css
+++ b/css/style.css
@@ -300,6 +300,12 @@ grid-area: showcase;
   .showcase h1 {
   font-size: 2.5rem;
  }
+ 
+  .info .btn {
+  display: block;
+  text-align: center;
+  margin: auto;
+ }
 }
 
 @media screen and (max-width: 500px) {
