--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body {
  padding: 0.6rem 1.3rem;
  text-decoration: none;
  border: 0;
+ text-align: center;
 }
 
 img {
@@ -107,7 +108,7 @@ img {
 }
 
 .showcase p {
- font-size: 1.1rem;
+ font-size: 2.1rem;
  margin-top: 0;
  margin-bottom: 15px;
  color: var(--light);
@@ -125,6 +126,10 @@ img {
 
 .top-box .price {
  font-size: 2.5rem;
+}
+
+.top-box h3+p {
+ text-align: center;
 }
 
 .top-box-a {
