--- a/css/style.css
+++ b/css/style.css
@@ -175,14 +175,12 @@ img {
 /* Swiper CSS */
 .swiper-container {
   width: 100%;
-  height: 100%;
+  height: 50%;
 }
 
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #000;
-
 }
 
 .swiper-slide img {
@@ -197,6 +195,7 @@ img {
   position: absolute;
   left: 50%;
   top: 50%;
+  box-shadow: var(--shadow);
 }
 
 .portfolio img{
