--- a/css/style.css
+++ b/css/style.css
@@ -165,22 +165,23 @@ img {
  padding: 3rem;
 }
 
-/* Portfolio 
+Portfolio 
 .portfolio {
- display: grid;
- grid-gap: 20px;
- grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-} */
+ background: var(--primary);
+ box-shadow: var(--shadow);
+ padding: 3rem;
+}
 
 /* Swiper CSS */
 .swiper-container {
   width: 100%;
-  height: 50%;
+  height: 100%;
 }
 
 .swiper-slide {
   text-align: center;
   font-size: 18px;
+  background: #000; 
 }
 
 .swiper-slide img {
@@ -195,7 +196,6 @@ img {
   position: absolute;
   left: 50%;
   top: 50%;
-  box-shadow: var(--shadow);
 }
 
 .portfolio img{
