--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ img {
  padding: 3rem;
 }
 
-Portfolio 
+/* Portfolio */ 
 .portfolio {
  background: var(--primary);
  box-shadow: var(--shadow);
@@ -174,8 +174,8 @@ Portfolio
 
 /* Swiper CSS */
 .swiper-container {
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 50%;
 }
 
 .swiper-slide {
