--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,26 @@ img {
  grid-gap: 20px;
 }
 
+#news {
+ background: #fff;
+ -webkit-box-sizing: border-box;
+ -moz-box-sizing: border-box;
+ box-sizing: border-box;
+ position: relative;
+ color: #000;
+ height: 500px;
+ display: block; 
+}
+
+.news-wrapper {
+ position: absolute;
+ left: 0;
+ top: 0;
+ width: 100%;
+ height: 100%;
+ background: #000;
+}
+
 /* Navigation */
 .main-nav ul {
  display: grid;
