--- a/css/style.css
+++ b/css/style.css
@@ -52,13 +52,10 @@ img {
 }
 
 #news {
- background: #fff;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  position: relative;
- color: #000;
- height: 500px;
  display: block; 
 }
 
@@ -68,7 +65,6 @@ img {
  top: 0;
  width: 100%;
  height: 100%;
- background: #000;
 }
 
 /* Navigation */
@@ -209,7 +205,7 @@ img {
   font-size: 18px;
 }
 
-.swiper-slide img {
+.swiper-slide .swiper-img {
   width: auto;
   height: auto;
   max-width: 100%;
