--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body {
  text-decoration: none;
  border: 0;
  text-align: center;
+ margin: 10px 0px;
 }
 
 img {
@@ -198,6 +199,7 @@ img {
 .swiper-container {
   width: 100%;
   height: 100%;
+  max-height: 500px;
 }
 
 .swiper-slide {
@@ -273,6 +275,10 @@ img {
 
 .news-box-b {
  grid-area: news-box-b
+}
+
+.news-box .price {
+ margin: 20px 0px;
 }
 
 /* Footer */
