--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,10 @@ img {
  grid-template-columns: repeat(2, 1fr);
 }
 
+.single-block {
+ grid-template-columns: repeat(1, 1fr);
+}
+
 .main-nav a {
  background: var(--primary);
  display: flex;
