--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ img {
  top: 0;
  width: 100%;
  height: 100%;
- max-height: 800px;
 }
 
 /* Navigation */
@@ -172,6 +171,11 @@ img {
  /*grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));*/ 
  grid-template-columns: repeat(3, 1fr);
 }
+
+.box:hover {
+ background: var(--dark);
+ color: var(--light);
+} 
 
 .box {
  background: var(--primary);
@@ -411,6 +415,10 @@ img {
    'showcase showcase'
    'top-box-a top-box-b';
  }
+ 
+ .news-wrapper {
+  max-height: 500px;
+}
  
   .showcase h1 {
   font-size: 2.5rem;
