--- a/css/style.css
+++ b/css/style.css
@@ -128,14 +128,14 @@ img {
 .showcase h1 {
  font-size: 4rem;
  margin-bottom: 0;
- color: var(--light);
+ color: var(--dark);
 }
 
 .showcase p {
  font-size: 2.1rem;
  margin-top: 0;
  margin-bottom: 15px;
- color: var(--light);
+ color: var(--dark);
 }
 
 /* Top Box */
