--- a/css/style2.css
+++ b/css/style2.css
@@ -5,3 +5,461 @@
  --light: #FFFFFF;
  --shadow: 0px 1px 5px rgba(104, 104, 104, 0.8);
 }
+
+html {
+ box-sizing: border-box;
+ /*font-family: Arial, helvetica, sans-serif;  'Times New Roman', sans-serif */
+ color: var(--dark);
+}
+
+body {
+ /*background: #CCCCCC;*/
+ margin: 30px 50px;
+ line-height: 1.4; 
+  /* height: 100vh; */
+ display: flex;
+ justify-content: center;
+ flex-direction: column;
+ align-items: center;
+ /* background: linear-gradient(rgb(47,150,160), rgb(40,62,143));*/ 
+}
+
+* {
+ box-sizing: border-box;
+ margin: 0;
+ padding: 0;
+ scroll-behavior: smooth;
+ font-family: Itim; 
+}
+
+.btn {
+ background: var(--dark);
+ color: var(--light);
+ padding: 0.6rem 1.3rem;
+ text-decoration: none;
+ border: 0;
+ text-align: center;
+ margin: 10px 0px;
+}
+
+.alert-btn {
+ background: var(--dark) !important;
+ color: var(--primary) !important;
+}
+
+.alert-btn i {
+ color: #ffff00;
+ margin: 0px 15px;
+}
+
+img {
+  max-width: 100%;
+}
+
+.wrapper {
+ display: grid;
+ grid-gap: 20px;
+}
+
+#news {
+ -webkit-box-sizing: border-box;
+ -moz-box-sizing: border-box;
+ box-sizing: border-box;
+ position: relative;
+ display: block; 
+}
+
+.news-wrapper {
+ position: absolute;
+ left: 0;
+ top: 0;
+ width: 100%;
+ height: 100%;
+}
+
+/* Navigation */
+.main-nav ul {
+ display: grid;
+ grid-gap: 10px;
+ padding: 0;
+ list-style: none;
+ grid-template-columns: repeat(2, 1fr);
+}
+
+.main-nav .single-block {
+ display: grid;
+ grid-gap: 10px;
+ padding: 0;
+ list-style: none;
+ grid-template-columns: repeat(1, 1fr);
+}
+
+.main-nav a {
+ background: var(--primary);
+ display: flex;
+ text-decoration: none;
+ padding: 0.8rem;
+ text-align: center;
+ color: var(--dark);
+ text-transform: uppercase;
+ font-size: 1.1rem;
+ box-shadow: var(--shadow);
+ align-items: center;
+ justify-content: center;
+ /*width: 600px;*/
+}
+
+.main-nav a:hover {
+ background: var(--dark);
+ color: var(--light);
+}
+
+/* Top Container */
+.top-container {
+ display: grid;
+ grid-gap: 20px;
+ grid-template-areas:
+  "showcase showcase top-box-a"
+  "showcase showcase top-box-b";
+}
+
+/* Showcase */
+.showcase {
+ grid-area: showcase;
+ min-height: 400px;
+ padding: 3rem;
+ display: flex;
+ flex-direction: column;
+ align-items: start;
+ justify-content: center;
+ box-shadow: var(--shadow);
+}
+
+.showcase h1 {
+ font-size: 4rem;
+ margin-bottom: 0;
+ color: var(--dark);
+}
+
+.showcase p {
+ font-size: 2.1rem;
+ margin-top: 0;
+ margin-bottom: 15px;
+ color: var(--dark);
+}
+
+/* Top Box */
+.top-box {
+ background: var(--primary);
+ display: grid;
+ align-items: center;
+ justify-items: center;
+ box-shadow: var(--shadow);
+ padding: 1.5rem;
+}
+
+.top-box .price {
+ font-size: 2.5rem;
+}
+
+.top-box h3+p {
+ text-align: center;
+}
+
+.top-box-a {
+ grid-area: top-box-a;
+}
+
+.top-box-b {
+ grid-area: top-box-b;
+}
+
+/* Boxes */
+.boxes {
+ display: grid;
+ grid-gap: 20px;
+ /*grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));*/ 
+ grid-template-columns: repeat(3, 1fr);
+}
+
+.box:hover {
+ background: var(--dark);
+ color: var(--light);
+} 
+
+.box {
+ background: var(--primary);
+ text-align: center;
+ padding: 1.5rem 2rem;
+ box-shadow: var(--shadow);
+}
+
+/* Info */
+.info {
+ background: var(--primary);
+ box-shadow: var(--shadow);
+ display: grid;
+ grid-gap: 30px;
+ grid-template-columns: repeat(2, 1fr);
+ padding: 3rem;
+}
+
+/* Portfolio */ 
+.portfolio {
+ background: var(--primary);
+ box-shadow: var(--shadow);
+ padding-top: 2rem;
+ padding-bottom: 2rem;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ min-height: 100vh;
+ overflow: hidden;
+}
+
+/* Swiper CSS */
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+}
+
+.swiper-slide .swiper-img {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  -ms-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+}
+
+.swiper-button-next.swiper-button-white, 
+.swiper-button-prev.swiper-button-white {
+    --swiper-navigation-color: #000000 !important;
+}
+
+.swiper-pagination-bullet-active {
+    width: 20px !important;
+    height: 20px !important;
+    background: #000000 !important;
+    opacity: none;
+}
+
+.swiper-pagination-bullet {
+    width: 20px !important;
+    height: 20px !important;
+    background: #000000 !important;
+    opacity: .2;
+}
+
+.portfolio img{
+ box-shadow: var(--shadow);
+}
+
+.info-title  {
+ /*margin-top: 2rem;*/
+ background: var(--primary);
+ color: var(--dark);
+ text-align: center;
+ padding: 1rem;
+ box-shadow: var(--shadow);
+}
+
+.info .price {
+ font-size: 1.5rem;
+ padding-bottom: 13px;
+}
+
+/* Articles */
+.article-container {
+ display: grid;
+ grid-template-areas:
+  "news-box-b news-box-a";
+ margin-top: 10px;
+}
+
+.news-box {
+ background: var(--primary);
+ display: grid;
+ box-shadow: var(--shadow);
+ padding: 1.5rem;
+}
+
+.news-box-a {
+ grid-area: news-box-a
+}
+
+.news-box-b {
+ grid-area: news-box-b
+}
+
+.news-box .price {
+ margin: 20px 0px;
+}
+
+/* Footer */
+.footer {
+ background: var(--dark);
+ color: var(--light);
+ text-align: center;
+ padding: 1rem;
+}
+
+/* Supported Browser Banner */
+.banner-support {
+ position: fixed;
+ width: 100%;
+ height: 200px;
+ /*padding 0 100px;*/
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ background: #3E3E3E;
+ z-index: 3;
+ bottom: 0px; 
+}
+
+.social-media-list {
+ list-style: none;
+ display: flex;
+}
+
+.banner-logo {
+ position: fixed;
+ bottom: 50px;
+ left: 30px; 
+}
+
+.browser-support-icon {
+ position: absolute;
+ top: 50%;
+ transform: translateY(-50%);
+ /* width: 100; */
+ text-align: center;
+}  
+
+.browser-support-icon h1 {
+ color: #FFFFFF;
+}
+
+.support-btn {
+ display: inline-block;
+ width: 80px;
+ height: 80px;
+ background: #F1F1F1;
+ margin: 10px;
+ border-radius: 30%;
+ box-shadow: 0 5px 15px -5px #00000070;
+ color: #3498DB;
+ overflow: hidden;
+ position: relative;
+}
+
+.support-btn i {
+ line-height: 80px;
+ font-size: 50px;
+ transition: 0.2s linear;
+}
+
+.support-btn:hover i{
+ transform: scale(1.3);
+ color: #F1F1F1;
+}
+
+.support-btn::before {
+ content: "";
+ position: absolute;
+ width: 120%;
+ height: 120%;
+ background: #3498DB;
+ transform: rotate(45deg);
+ left: -110%;
+ top: 90%;
+}
+
+.support-btn:hover::before {
+ animation: aaa 0.7s 1;
+ top: -10%;
+ left: -10%;
+}
+
+@keyframes aaa {
+ 0%{
+  left: -110%;
+  top: 90%;
+ }50%{
+  left: 10%;
+  top: -30%;
+ }100%{
+  top: -10%;
+  left: -10%;
+ }
+}
+
+@media screen and (max-width: 823px) {
+ .support-btn {
+  width: 60px;
+  height: 60px;
+ }
+
+.support-btn i {
+  line-height: 60px;
+  font-size: 40px;
+ }
+ 
+ .banner-logo {
+  display: none;
+ }
+ 
+ .top-container {
+  grid-template-areas:
+   'showcase showcase'
+   'top-box-a top-box-b';
+ }
+ 
+ .news-wrapper {
+  max-height: 500px;
+}
+ 
+  .showcase h1 {
+  font-size: 2.5rem;
+ }
+ 
+  .info .btn {
+  display: block;
+  text-align: center;
+  margin: auto;
+ }
+}
+
+@media screen and (max-width: 500px) {
+ .top-container {
+  grid-template-areas:
+   'showcase'
+   'top-box-a'
+   'top-box-b';
+ }
+ 
+ .boxes {
+ grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+ }
+ 
+  .info {
+  grid-template-columns: 1fr;
+ }
+ 
+ .article-container {
+  grid-template-areas:
+  "news-box-b" 
+  "news-box-a";
+ } 
+}
