--- a/css/style2.css
+++ b/css/style2.css
@@ -179,7 +179,7 @@ img {
  display: grid;
  grid-gap: 20px;
  /*grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));*/ 
- grid-template-columns: repeat(3, 1fr);
+ grid-template-columns: repeat(2, 1fr);
 }
 
 .box:hover {
@@ -213,7 +213,7 @@ img {
  display: flex;
  justify-content: center;
  align-items: center;
- min-height: 100vh;
+ /* min-height: 100vh; */
  overflow: hidden;
 }
 
