--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,19 @@ img {
   max-width: 100%;
 }
 
+.hamburger {
+ position: fixed;
+ bottom: 20px;
+ right: 30px;
+ background: #FFFFFF;
+ width: 40px;
+ height: 40px;
+ cursor: pointer;
+ border-radius: 10px;
+ box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
+ z-index: 1; 
+}
+
 .wrapper {
  display: grid;
  grid-gap: 20px;
