--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,8 @@ img {
 
 .hamburger {
  position: fixed;
- bottom: 20px;
- right: 30px;
+ bottom: 150px;
+ right: 5px;
  background: #FFFFFF;
  width: 40px;
  height: 40px;
@@ -305,6 +305,8 @@ img {
  display: grid;
  box-shadow: var(--shadow);
  padding: 1.5rem;
+ justify-content: center;
+ align-items: center;
 }
 
 .news-box-a {
