--- a/css/style.css
+++ b/css/style.css
@@ -233,8 +233,24 @@ img {
  align-items: center;
  text-align: center;
  grid-template-columns: repeat(7,1fr);
- padding-bottom: 1.5px;
- padding: 0px 5px;
+ padding: 5px 11px;
+ margin: 0px 20px;
+}
+
+.info-title  {
+ margin-top: 2rem;
+ background: var(--primary);
+ color: var(--dark);
+ text-align: center;
+ padding: 1rem 2rem;
+ box-shadow: var(--shadow);
+ align-items: center;
+ justify-content: center;
+}
+
+.info .price {
+ font-size: 1.5rem;
+ padding-bottom: 13px;
 }
 
 /* Portfolio */ 
@@ -296,20 +312,6 @@ img {
 
 .portfolio img{
  box-shadow: var(--shadow);
-}
-
-.info-title  {
- /*margin-top: 2rem;*/
- background: var(--primary);
- color: var(--dark);
- text-align: center;
- padding: 1rem;
- box-shadow: var(--shadow);
-}
-
-.info .price {
- font-size: 1.5rem;
- padding-bottom: 13px;
 }
 
 /* Articles */
@@ -488,6 +490,10 @@ img {
  grid-template-columns: repeat(1, 1fr)
  /*grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));*/
  }
+ 
+ .covid-track-head-titles {
+ font-size: 8px;
+}
  
   .info {
   grid-template-columns: 1fr;
