--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ img {
 .wrapper {
  display: grid;
  grid-gap: 20px;
- margin: 20px 30px;
+ margin: 20px 0px;
 }
 
 #news {
@@ -98,6 +98,10 @@ img {
 }
 
 /* Navigation */
+.main nav {
+ margin: 0px 30px;
+}
+
 .main-nav ul {
  display: grid;
  grid-gap: 10px;
@@ -112,6 +116,7 @@ img {
  padding: 0;
  list-style: none;
  grid-template-columns: repeat(1, 1fr);
+ margin: 0px 30px;
 }
 
 .main-nav a {
@@ -138,6 +143,7 @@ img {
 .top-container {
  display: grid;
  grid-gap: 20px;
+ margin: 0px 30px;
  grid-template-areas:
   "showcase showcase top-box-a"
   "showcase showcase top-box-b";
@@ -198,6 +204,7 @@ img {
 .boxes {
  display: grid;
  grid-gap: 20px;
+ margin: 0px 30px;
  /*grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));*/ 
  grid-template-columns: repeat(3, 1fr);
 }
@@ -273,6 +280,7 @@ img {
  box-shadow: var(--shadow);
  align-items: center;
  justify-content: center;
+ margin: 0px 30px;
 }
 
 .info .price {
@@ -415,7 +423,7 @@ table {
  color: var(--light);
  text-align: center;
  padding: 1rem;
- margin: 20px 30px;
+ margin-top: 20px;
 }
 
 /* Supported Browser Banner */
