--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ img {
 .wrapper {
  display: grid;
  grid-gap: 20px;
- margin: 20px 0px;
+ margin-top: 20px;
 }
 
 #news {
@@ -116,7 +116,6 @@ img {
  padding: 0;
  list-style: none;
  grid-template-columns: repeat(1, 1fr);
- margin: 0px 30px;
 }
 
 .main-nav a {
@@ -137,6 +136,7 @@ img {
 .main-nav a:hover {
  background: var(--dark);
  color: var(--light);
+ cursor: pointer;
 }
 
 /* Top Container */
@@ -212,6 +212,7 @@ img {
 .box:hover {
  background: var(--dark);
  color: var(--light);
+ cursor: pointer;
 } 
 
 .box {
@@ -237,6 +238,13 @@ img {
 .data-table-john-hopkins,
 .data-table-new-york-times,
 .data-table-covid-track {
+ display: grid;
+}
+
+.Tabular-data {
+ justify-content: center;
+ align-items: center;
+ text-align: center;
  display: grid;
 }
 
