--- a/css/style.css
+++ b/css/style.css
@@ -384,19 +384,22 @@ table {
 .swiper-button-next.swiper-button-white, 
 .swiper-button-prev.swiper-button-white {
     --swiper-navigation-color: #000000 !important;
+    padding: 25px;
+    border: 2px solid white;
+    background: white; 
 }
 
 .swiper-pagination-bullet-active {
     width: 20px !important;
     height: 20px !important;
-    background: #000000 !important;
+    background: #FFFFFF !important;
     opacity: none;
 }
 
 .swiper-pagination-bullet {
     width: 20px !important;
     height: 20px !important;
-    background: #000000 !important;
+    background: #FFFFFF !important;
     opacity: .2;
 }
 
