--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ img {
 
 /* Info */
 .info {
- background: var(--primary);
+ /*background: var(--primary);*/
  box-shadow: var(--shadow);
  display: grid;
  grid-gap: 30px;
