--- a/css/style2.css
+++ b/css/style2.css
@@ -204,7 +204,7 @@ img {
 
 /* Info */
 .info {
- background: var(--primary);
+ /*background: var(--primary);*/
  box-shadow: var(--shadow);
  display: grid;
  grid-gap: 30px;
