--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,32 @@ body {
  font-family: 'Itim', Arial; 
 }
 
+/* Select Options */
+.select:focus {
+  border-color: blue;
+}
+
+.select .header select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  font-family: inherit;
+  font-size: inherit;
+  padding: 0;
+  border-width: 0;
+  width: 100%;
+  flex: 1;
+  display: none;
+}
+
+.select .header select optgroup {
+  display: none;
+}
+
+.select select div.option {
+  display: none;
+}
+
 .btn {
  background: var(--dark);
  color: var(--light);
