--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,24 @@ select {
  margin: 0px 15px;
 }
 
+.news-btn {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 30px;
+}
+
+.news-btn i {
+ color: #ffff00;
+ margin: 0px 15px;
+}
+
 .FilterRow {
  display: flex;
  align-items: center;
