--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ select {
   display: none;
 }
 
+/*Button*/
 .btn {
  background: var(--dark);
  color: var(--light);
@@ -276,7 +277,8 @@ img {
  grid-template-columns: repeat(2, 1fr);
 }
 
-.box:hover {
+.box:hover,
+tab-border {
  background: var(--dark);
  color: var(--light);
  /*cursor: pointer;*/
@@ -302,6 +304,17 @@ img {
  text-align: center;
  padding: 1.5rem 2rem;
  box-shadow: var(--shadow); 
+}
+
+/* Tab Content */
+#tab-1-content,
+#tab-2-content,
+#tab-3-content {
+ display: none;
+}
+
+.show {
+ display: block !important;
 }
 
 /* Info */
