--- a/css/style.css
+++ b/css/style.css
@@ -81,12 +81,13 @@ select {
 }
 
 #selectButton {
-    margin: 0 0 0 125px;
-    border: 2px solid #e64120;
+    margin: 0 0 0 135px;
+    border: 2px solid #000080 /*#e64120*/;
     line-height: 1;
     font-family: arial, sans-serif;
+    font-weight: 900;
     border-radius: 4px;
-    color: #000;
+    color: #FFFFFF;
     text-transform: uppercase;
     cursor: pointer;
     appearance: none;
@@ -98,7 +99,7 @@ select {
     padding-right: 30px;
     outline: none !important;
     background-color: black;
-    padding: 5px 0px;
+    padding: 15px 0px;
 }
 
 /*Button*/
