--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,8 @@ img {
  box-shadow: var(--shadow);
 }
 
-.tab-border {
+.tab-border,
+.data-tab-border {
  background: var(--dark) !important;
  color: var(--light);
 } 
@@ -335,7 +336,10 @@ img {
 /* Tab Content */
 #tab-1-content,
 #tab-2-content,
-#tab-3-content {
+#tab-3-content,
+#source-tab-1-content,
+#source-tab-2-content,
+#source-tab-3-content {
  display: none;
 }
 
