--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,7 @@ img {
  grid-gap: 20px;
  margin: 0px 30px;
  grid-template-areas:
-  "top-box-a"
+  "top-box-a top-box-a"
   "top-box-b top-box-c";
 }
 
