--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ select {
 }
 
 .selectButton {
-    margin: 0 0 0 135px;
+    /*margin: 0 0 0 135px;*/
     border: 2px solid #000080 /*#e64120*/;
     line-height: 1;
     font-family: arial, sans-serif;
@@ -169,6 +169,10 @@ img {
  display: grid;
  grid-gap: 20px;
  margin-top: 20px;
+}
+
+.wrapper-alt {
+ display: grid;
 }
 
 #news {
@@ -326,8 +330,9 @@ img {
  grid-gap: 20px;
  margin: 0px 30px;
  grid-template-areas:
-  "top-box-a top-box-a"
-  "top-box-b top-box-c";
+  "top-box-a"
+  "top-box-b" 
+  "top-box-c";
 }
 
 .vac-boxes {
