--- a/css/style.css
+++ b/css/style.css
@@ -330,9 +330,7 @@ img {
  grid-gap: 20px;
  margin: 0px 30px;
  grid-template-areas:
-  "top-box-a"
-  "top-box-b" 
-  "top-box-c";
+  "top-box-a";
 }
 
 .vac-boxes {
