--- a/css/style.css
+++ b/css/style.css
@@ -592,13 +592,16 @@ table {
  margin: 20px 0px;
 }
 
-/* Footer */
+/* Footer Banner*/
 .footer {
  background: var(--dark);
  color: var(--light);
  text-align: center;
  padding: 1rem;
- margin-top: 20px;
+ top: -210px;
+ width: 100%;
+ z-index: 3;
+ position: fixed;
 }
 
 /* Supported Browser Banner */
