--- a/css/style.css
+++ b/css/style.css
@@ -81,8 +81,8 @@ select {
 }
 
 .selectButton {
-    /*margin: 0 0 0 135px;*/
-    border: 2px solid #000080 /*#e64120*/;
+    /*margin: 0 0 0 135px;
+    border: 2px solid #000080 #e64120*/;
     line-height: 1;
     font-family: arial, sans-serif;
     font-weight: 900;
